@@ -1,5 +1,9 @@
 2009-04-29  Jorge Gonzalez  <jorgegonz@artica.es>
 
+	* install.php: fixed typos.
+
+2009-04-29  Jorge Gonzalez  <jorgegonz@artica.es>
+
 	* include/languages/es.po, include/languages/es.mo: Updated spanish
 	translation.
 
